# AlltheVibes-WildHackathon

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: alex-azure.agent.md  alex-builder.agent.md  alex-documentarian.agent.md  alex-m365.agent.md  alex-researcher.agent.md  alex-validator.agent.md  alex.agent.md
.github/config/: alex-manifest.json  cognitive-config-template.json  user-profile.template.json
.github/instructions/: SYNAPSE-SCHEMA.md  adversarial-oversight.instructions.md  ai-character-reference-generation.instructions.md  ai-generated-readme-banners.instructions.md  alex-core.instructions.md  alex-identity-integration.instructions.md  architecture-decision-records.instructions.md  automated-quality-gates.instructions.md  azure-enterprise-deployment.instructions.md  bootstrap-learning.instructions.md  brand-asset-management.instructions.md  character-aging-progression.instructions.md  chat-participant-patterns.instructions.md  code-review-guidelines.instructions.md  cognitive-health-validation.instructions.md  copilot-chat-buttons.instructions.md  deep-thinking.instructions.md  dependency-management.instructions.md  dream-state-automation.instructions.md  embedded-synapse.instructions.md  empirical-validation.instructions.md  extension-audit-methodology.instructions.md  gamma-presentation.instructions.md  global-knowledge-curation.instructions.md  (+35 more)
space-invaders/: README.md  index.html
tests/: test_tools.py
vics_agent/: __init__.py  agent.py  cli.py  config.py  llm.py  tools.py
(+313 files in other folders)
